re PR c++/17501 (Confusion with member templates)

PR c++/17501
	* parser.c (cp_parser_nested_name_specifier): Do not resolve
	typename types if the user explicitly said "typename".

	PR c++/17501
	* g++.dg/template/typename7.C: New test.

From-SVN: r87618